fix(runtime): unify API32 and API35 acceptance path